--- a/gestion_models/templates/index.html
+++ b/gestion_models/templates/index.html
@@ -18,5 +18,9 @@
              {{master}}
       {%endfor%}
       </ul>
+    <form method="POST"> 
+      <textarea name="textbox"></textarea>
+      <button type="submit" name="submit">Submit</button>
+    </form>
   </body>
 </html>
