error traceback appear in fail execution

--- a/gestion_models/templates/index.html
+++ b/gestion_models/templates/index.html
@@ -30,7 +30,7 @@
                  {%elif isinp==0%}
                     <li><a href={{c}}>{{k}}</a>:{{t|safe}}</li>
                  {%elif isinp==2%}
-                 <li>{{k}}:{{t|safe}}</li>
+                 <li><a href={{c}}>{{k}}</a>:{{t|safe}}</li>
                  {%endif%}
 
             {%endfor%}
